@@ -11,7 +11,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclWinFile.c,v 1.14 2001/09/07 17:08:50 andreas_kupries Exp $
+ * RCS: @(#) $Id: tclWinFile.c,v 1.15 2001/09/10 17:17:41 andreas_kupries Exp $
  */
 
 #include "tclWinInt.h"
@@ -694,14 +694,6 @@ TclpObjChdir(pathPtr)
     int result;
     TCHAR *nativePath;
 
-    /*
-     * Ensure correct file sizes by forcing the OS to write any
-     * pending data to disk. This is done only for channels which are
-     * dirty, i.e. have been written to since the last flush here.
-     */
-
-    TclWinFlushDirtyChannels ();
-
     nativePath = (TCHAR *) Tcl_FSGetNativePath(pathPtr);
     result = (*tclWinProcs->setCurrentDirectoryProc)(nativePath);
 
@@ -849,6 +841,14 @@ TclpObjStat(pathPtr, statPtr)
 	Tcl_SetErrno(ENOENT);
 	return -1;
     }
+
+    /*
+     * Ensure correct file sizes by forcing the OS to write any
+     * pending data to disk. This is done only for channels which are
+     * dirty, i.e. have been written to since the last flush here.
+     */
+
+    TclWinFlushDirtyChannels ();
 
     return NativeStat((TCHAR*) Tcl_FSGetNativePath(pathPtr), statPtr);
 }
